--- a/style.css
+++ b/style.css
@@ -215,3 +215,30 @@ footer p{
 #ouside-text{
     text-align: center;
 }
+#resume{
+color: orangered;
+  animation-name: example;
+  animation-duration: 4s;
+}
+  
+@keyframes fontChange {
+    0% {
+      font-family: 'Major Mono Display', monospace;
+    }
+    20% {
+      font-family: 'Kaushan Script', cursive;
+    }
+    40% {
+      font-family: 'Lobster', cursive;
+    }
+    60% {
+      font-family: 'Ranchers', cursive;
+    }
+    80% {
+      font-family: 'Bitter', serif;
+    }
+    100% {
+      font-family: 'Major Mono Display', monospace;
+    }
+  }
+  @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Kaushan+Script&family=Lobster&family=Major+Mono+Display&family=Ranchers&display=swap');
